--- a/api/.env
+++ b/api/.env
@@ -6,7 +6,7 @@ RUN_MIGRATIONS=true
 POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=iii3studi1
+POSTGRES_PASSWORD=****
 POSTGRES_DB=MY-TODO
 
 JWT_SECRET=jwt_secret_key
